# embedded-services

./: CODEOWNERS  Cargo.toml  LICENSE  README.md  deny.toml  rust-toolchain.toml
battery-service/: Cargo.toml  README.md
battery-service-interface/: Cargo.toml
battery-service-interface/src/: fuel_gauge.rs  lib.rs
battery-service-messages/: Cargo.toml
battery-service-messages/src/: lib.rs
battery-service-relay/: Cargo.toml
battery-service-relay/src/: lib.rs  serialization.rs
battery-service/src/: acpi.rs  context.rs  controller.rs  device.rs  lib.rs  mock.rs  registration.rs  task.rs  wrapper.rs
battery-service/src/charger/: mod.rs
battery-service/src/fuel_gauge/: mod.rs
cfu-service/: Cargo.toml
cfu-service/src/: buffer.rs  component.rs  customization.rs  host.rs  lib.rs  responses.rs  splitter.rs  task.rs
cfu-service/src/basic/: config.rs  event_receiver.rs  mod.rs  state.rs  test.rs
cfu-service/src/mocks/: customization.rs  mod.rs
debug-service/: Cargo.toml
debug-service-messages/: Cargo.toml
debug-service-messages/src/: lib.rs
debug-service/src/: debug_service.rs  defmt_ring_logger.rs  lib.rs  task.rs
embedded-service/: Cargo.toml
embedded-service/src/: activity.rs  buffer.rs  comms.rs  critical_section_cell.rs  event.rs  fmt.rs  intrusive_list.rs  keyboard.rs  lib.rs  named.rs  sync.rs  sync_cell.rs  thread_mode_cell.rs
embedded-service/src/broadcaster/: immediate.rs  mod.rs
embedded-service/src/cfu/: component.rs  mod.rs
embedded-service/src/ec_type/: message.rs  mod.rs  structure.rs
embedded-service/src/hid/: command.rs  mod.rs
embedded-service/src/ipc/: deferred.rs
embedded-service/src/relay/: mod.rs
embedded-service/src/transformers/: mod.rs  object.rs
embedded-service/src/type_c/: comms.rs  controller.rs  event.rs  external.rs  mod.rs
espi-service/: Cargo.toml
espi-service/src/: espi_service.rs  lib.rs  mctp.rs  task.rs
fw-update-interface/: Cargo.toml
fw-update-interface-mocks/: Cargo.toml
fw-update-interface-mocks/src/: basic.rs  lib.rs
fw-update-interface/src/: basic.rs  lib.rs
keyboard-service/: Cargo.toml
keyboard-service/src/: gpio_kb.rs  hid_kb.rs  lib.rs  task.rs
mctp-rs/: Cargo.toml  README.md
mctp-rs/src/: buffer_encoding.rs  deserialize.rs  error.rs  lib.rs  mctp_command_code.rs  mctp_completion_code.rs  mctp_packet_context.rs  mctp_transport_header.rs  serialize.rs  test_util.rs
mctp-rs/src/medium/: mod.rs  serial.rs  smbus_espi.rs  util.rs
mctp-rs/src/message_type/: mctp_control.rs  mod.rs  vendor_defined_pci.rs
platform-service/: Cargo.toml  README.md
platform-service/src/: embedded_crc.rs  lib.rs  nvram.rs  reset.rs
platform-service/src/defaults/: embedded_crc.rs  mod.rs
platform-service/src/imxrt/: embedded_crc.rs  mod.rs
power-policy-interface/: Cargo.toml
power-policy-interface-test-mocks/: Cargo.toml
power-policy-interface-test-mocks/src/: charger.rs  lib.rs  psu.rs
power-policy-interface/src/: capability.rs  charger.rs  lib.rs
power-policy-interface/src/charger/: event.rs  mock.rs  mod.rs  tests.rs
power-policy-interface/src/psu/: event.rs  mod.rs
power-policy-interface/src/service/: event.rs  mod.rs
power-policy-service/: Cargo.toml
power-policy-service/src/: charger.rs  config.rs  consumer.rs  lib.rs  provider.rs  psu.rs  task.rs  wrapper.rs
power-policy-service/src/service/: config.rs  consumer.rs  context.rs  customization.rs  mod.rs  provider.rs  registration.rs  task.rs
power-policy-service/tests/: consumer.rs  full_flow.rs  provider.rs  unconstrained.rs
power-policy-service/tests/common/: mock.rs  mod.rs
thermal-service/: Cargo.toml
thermal-service-interface/: Cargo.toml
thermal-service-interface/src/: fan.rs  lib.rs  sensor.rs
thermal-service-messages/: Cargo.toml
thermal-service-messages/src/: lib.rs
thermal-service-relay/: Cargo.toml
thermal-service-relay/src/: lib.rs  serialization.rs
thermal-service/src/: context.rs  fan.rs  lib.rs  mctp.rs  mptf.rs  sensor.rs  task.rs  utils.rs
thermal-service/src/mock/: fan.rs  mod.rs  sensor.rs
time-alarm-service/: Cargo.toml
time-alarm-service-interface/: Cargo.toml
time-alarm-service-interface/src/: acpi_timestamp.rs  lib.rs
time-alarm-service-messages/: Cargo.toml
time-alarm-service-messages/src/: acpi_timestamp.rs  lib.rs
time-alarm-service-relay/: Cargo.toml
time-alarm-service-relay/src/: lib.rs  serialization.rs
time-alarm-service/src/: lib.rs  mock.rs  task.rs  timer.rs
time-alarm-service/tests/: tad_test.rs
type-c-interface/: Cargo.toml
type-c-interface-mocks/: Cargo.toml
type-c-interface-mocks/src/: lib.rs
type-c-interface-mocks/src/controller/: mod.rs  pd.rs
type-c-interface-test-mocks/: Cargo.toml
type-c-interface-test-mocks/src/controller/: max_sink_voltage.rs  mod.rs  ucsi.rs
type-c-interface/src/: lib.rs  ucsi.rs  util.rs
type-c-interface/src/control/: dp.rs  mod.rs  pd.rs  power.rs  retimer.rs  svid.rs  tbt.rs  type_c.rs  usb.rs  vdm.rs
type-c-interface/src/controller/: discover_identity.rs  electrical_disconnect.rs  hard_reset.rs  max_sink_voltage.rs  mod.rs  pd.rs  power.rs  retimer.rs  svid.rs  type_c.rs
type-c-interface/src/port/: discover_identity.rs  electrical_disconnect.rs  event.rs  hard_reset.rs  max_sink_voltage.rs  mod.rs  pd.rs  power.rs  retimer.rs  svid.rs  type_c.rs
type-c-interface/src/service/: context.rs  event.rs
type-c-service/: Cargo.toml
type-c-service/src/: lib.rs  task.rs  util.rs
type-c-service/src/bridge/: event_receiver.rs  mod.rs
type-c-service/src/controller/: config.rs  discover_identity.rs  electrical_disconnect.rs  event.rs  event_receiver.rs  hard_reset.rs  macros.rs  max_sink_voltage.rs  mod.rs  pd.rs  power.rs  retimer.rs  state.rs  svid.rs  type_c.rs  ucsi.rs
type-c-service/src/driver/: tps6699x.rs
type-c-service/src/service/: config.rs  controller.rs  event_receiver.rs  mod.rs  pd.rs  port.rs  power.rs  registration.rs  ucsi.rs  vdm.rs
type-c-service/src/type_c/: controller.rs  (+3 more)
type-c-service/tests/: external.rs  notifications.rs  power.rs  service.rs  ucsi.rs  unconstrained.rs
(+93 files in other folders)
