[workspace]
resolver = "2"
members = [
    "battery-service",
    "battery-service-messages",
    "thermal-service",
    "thermal-service-messages",
    "cfu-service",
    "embedded-service",
    "espi-service",
    "uart-service",
    "hid-service",
    "partition-manager/generation",
    "partition-manager/macros",
    "partition-manager/partition-manager",
    "platform-service",
    "power-button-service",
    "power-policy-service",
    "type-c-service",
    "debug-service",
    "debug-service-messages",
    "keyboard-service",
]
exclude = ["examples/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/OpenDevicePartnership/embedded-services"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
correctness = "deny"
expect_used = "deny"
indexing_slicing = "deny"
panic = "deny"
panic_in_result_fn = "deny"
perf = "deny"
suspicious = "deny"
style = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
unwrap_used = "deny"

[workspace.dependencies]
aligned = "0.4"
anyhow = "1.0"
battery-service-messages = { path = "./battery-service-messages" }
bitfield = "0.17.0"
bitflags = "2.8.0"
bitvec = { version = "1.0.1", default-features = false }
block-device-driver = "0.2"
cfg-if = "1.0.0"
chrono = { version = "0.4", default-features = false }
cortex-m = "0.7.6"
cortex-m-rt = "0.7.5"
critical-section = "1.1"
defmt = "0.3"
document-features = "0.2.7"
debug-service-messages = { path = "./debug-service-messages" }
embassy-futures = "0.1.2"
embassy-imxrt = { git = "https://github.com/OpenDevicePartnership/embassy-imxrt" }
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
embassy-time-driver = "0.2.1"
embedded-batteries-async = "0.2.0"
embedded-cfu-protocol = { git = "https://github.com/OpenDevicePartnership/embedded-cfu" }
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-hal-nb = "1.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-mcu-hal = { git = "https://github.com/OpenDevicePartnership/embedded-mcu" }
embedded-services = { path = "./embedded-service" }
embedded-storage = "0.3"
embedded-storage-async = "0.4.1"
embedded-usb-pd = { git = "https://github.com/OpenDevicePartnership/embedded-usb-pd", default-features = false }
mctp-rs = { git = "https://github.com/dymk/mctp-rs" }
num_enum = { version = "0.7.4", default-features = false }
portable-atomic = { version = "1.11", default-features = false }
fixed = "1.23.1"
heapless = "0.8.*"
log = "0.4"
postcard = "1.*"
proc-macro2 = "1.0"
quote = "1.0"
rand_core = "0.6.4"
rstest = { version = "0.26.1", default-features = false }
serde = { version = "1.0.*", default-features = false }
static_cell = "2.1.0"
toml = { version = "0.8", default-features = false }
thermal-service-messages = { path = "./thermal-service-messages" }
syn = "2.0"
tps6699x = { git = "https://github.com/OpenDevicePartnership/tps6699x" }
tokio = { version = "1.42.0" }
uuid = { version = "=1.17.0", default-features = false }
zerocopy = "0.8.26"
