[package]
name = "battery-service-messages"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
defmt = { workspace = true, optional = true }
log = { workspace = true, optional = true }
embedded-batteries-async.workspace = true
embedded-services.workspace = true
num_enum.workspace = true

[lints]
workspace = true

[features]
defmt = [
    "dep:defmt",
    "embedded-services/defmt",
    "embedded-batteries-async/defmt",
]
log = ["dep:log", "embedded-services/log"]
