[package]
name = "battery-service"
version = "0.1.0"
edition = "2024"
description = "Battery fuel gauge and charger embedded service implementation"
repository = "https://github.com/OpenDevicePartnership/embedded-services"
rust-version = "1.85"
license = "MIT"

[lints]
workspace = true

[dependencies]
defmt = { workspace = true, optional = true }
embassy-executor.workspace = true
embassy-futures.workspace = true
embassy-sync.workspace = true
embassy-time.workspace = true
embedded-batteries-async.workspace = true
embedded-hal-async.workspace = true
embedded-hal.workspace = true
embedded-services.workspace = true
log = { workspace = true, optional = true }
zerocopy.workspace = true
mctp-rs = { workspace = true, features = ["espi"] }

[features]
default = []
defmt = [
    "dep:defmt",
    "embedded-services/defmt",
    "embassy-time/defmt",
    "embassy-sync/defmt",
    "embassy-executor/defmt",
    "embedded-batteries-async/defmt",
    "mctp-rs/defmt",
]
log = [
    "dep:log",
    "embedded-services/log",
    "embassy-time/log",
    "embassy-sync/log",
    "embassy-executor/log",
]
