[package]
name = "battery-service"
version = "0.1.0"
edition = "2024"
description = "Battery fuel gauge and charger embedded service implementation"
repository = "https://github.com/OpenDevicePartnership/embedded-services"
rust-version = "1.88"
license = "MIT"

[lints]
workspace = true

[dependencies]
defmt = { workspace = true, optional = true }
battery-service-interface.workspace = true
embassy-futures.workspace = true
embassy-sync.workspace = true
embassy-time.workspace = true
embedded-batteries-async.workspace = true
embedded-hal-async.workspace = true
embedded-hal.workspace = true
embedded-services.workspace = true
log = { workspace = true, optional = true }
odp-service-common.workspace = true
power-policy-interface.workspace = true

[features]
default = []
defmt = [
    "dep:defmt",
    "battery-service-interface/defmt",
    "embedded-services/defmt",
    "embassy-time/defmt",
    "embassy-sync/defmt",
    "embedded-batteries-async/defmt",
    "power-policy-interface/defmt",
]
log = [
    "dep:log",
    "battery-service-interface/log",
    "embedded-services/log",
    "embassy-time/log",
    "embassy-sync/log",
    "power-policy-interface/log",
]
mock = []
