[package]
name = "battery-service"
version = "0.1.0"
edition = "2024"
description = "Battery fuel gauge and charger embedded service implementation"
repository = "https://github.com/OpenDevicePartnership/embedded-services"
rust-version.workspace = true
license = "MIT"

[package.metadata.cargo-machete]
ignored = ["log"]

[lints]
workspace = true

[dependencies]
defmt = { workspace = true, optional = true }
embassy-futures.workspace = true
embassy-sync.workspace = true
embassy-time.workspace = true
embedded-batteries-async.workspace = true
embedded-services.workspace = true
log = { workspace = true, optional = true }

[features]
default = []
defmt = [
    "dep:defmt",
    "embedded-services/defmt",
    "embassy-time/defmt",
    "embassy-sync/defmt",
    "embedded-batteries-async/defmt",
]
log = [
    "dep:log",
    "embedded-services/log",
    "embassy-time/log",
    "embassy-sync/log",
]
