[package]
name = "embedded-services"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Embedded Service Layer for IPC, Feature Customization and Extension in Embedded Devices."
repository = "https://github.com/OpenDevicePartnership/embedded-services"
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
bitfield.workspace = true
critical-section.workspace = true
defmt = { workspace = true, optional = true }
embassy-sync.workspace = true
embassy-futures.workspace = true
log = { workspace = true, optional = true }
paste.workspace = true

[dependencies.mctp-rs]
workspace = true
features = ["espi"]

[dependencies.serde]
workspace = true
features = ["serde_derive"]

[target.'cfg(not(target_has_atomic = "ptr"))'.dependencies]
portable-atomic.workspace = true

[target.'cfg(all(target_os = "none", target_arch = "arm"))'.dependencies]
cortex-m.workspace = true

[dev-dependencies]
critical-section = { workspace = true, features = ["std"] }
embassy-sync = { workspace = true, features = ["std"] }
static_cell.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "time"] }

[features]
default = []
defmt = ["dep:defmt", "embassy-sync/defmt", "mctp-rs/defmt"]
log = ["dep:log", "embassy-sync/log"]
