[package]
name = "espi-service"
version = "0.1.0"
edition = "2024"
description = "eSPI embedded service implementation"
repository = "https://github.com/OpenDevicePartnership/embedded-services"
rust-version.workspace = true
license = "MIT"

[package.metadata.cargo-machete]
ignored = ["log"]

[lints]
workspace = true

[dependencies]
embedded-services.workspace = true
defmt = { workspace = true, optional = true }
log = { workspace = true, optional = true }
embassy-sync.workspace = true
embassy-imxrt = { workspace = true, features = ["mimxrt633s"] }
embassy-futures.workspace = true
mctp-rs = { workspace = true, features = ["espi"] }

[target.'cfg(target_os = "none")'.dependencies]
cortex-m-rt.workspace = true
cortex-m = { workspace = true, features = [
    "inline-asm",
    "critical-section-single-core",
] }
embassy-imxrt = { workspace = true, features = [
    "time-driver-os-timer",
    "time",
    "mimxrt633s",
] }

[features]
default = []
defmt = [
    "dep:defmt",
    "embedded-services/defmt",
    "embassy-sync/defmt",
    "embassy-imxrt/defmt",
    "mctp-rs/defmt",
]

log = ["dep:log", "embedded-services/log"]
