[package]
name = "fw-update-interface-mocks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
embedded-services = { workspace = true }
fw-update-interface = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time"] }

[lints]
workspace = true
