[package]
name = "fw-update-interface"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
log = { workspace = true, optional = true }
defmt = { workspace = true, optional = true }
embedded-services = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time"] }

[features]
default = []
defmt = ["dep:defmt", "embedded-services/defmt"]
log = ["dep:log", "embedded-services/log"]

[lints]
workspace = true

[package.metadata.cargo-machete]
# Not directly needed currently, but present to match the log/defmt patterns of other crates
ignored = ["log"]
