[package]
name = "keyboard-service"
version = "0.1.0"
edition = "2024"
description = "Keyboard service implementation"
repository = "https://github.com/OpenDevicePartnership/embedded-services"
rust-version = "1.85"
license = "MIT"

[dependencies]
defmt = { workspace = true, optional = true }
log = { workspace = true, optional = true }
embassy-executor.workspace = true
embassy-futures.workspace = true
embassy-sync.workspace = true
embassy-time.workspace = true
embedded-services.workspace = true
embedded-hal.workspace = true
static_cell.workspace = true
hid-service = { path = "../hid-service" }
keyberon = { git = "https://github.com/TeXitoi/keyberon" }

[features]
default = []
defmt = [
    "dep:defmt",
    "embedded-services/defmt",
    "embassy-time/defmt",
    "embassy-sync/defmt",
    "embassy-executor/defmt",
    "hid-service/defmt",
]
log = [
    "dep:log",
    "embedded-services/log",
    "embassy-time/log",
    "embassy-sync/log",
    "embassy-executor/log",
    "hid-service/log",
]
