[package]
name = "platform-service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
cortex-m = { workspace = true, optional = true }
crc = "3.2.1"
defmt = { workspace = true, optional = true }
embassy-imxrt = { workspace = true, optional = true, features = ["unstable-pac"] }
embassy-sync.workspace = true
embassy-time.workspace = true
embedded-cfu-protocol.workspace = true
embedded-services.workspace = true
heapless.workspace = true
log = { workspace = true, optional = true }

[features]
# TODO find method to unblock CI gate without requiring chip specification at library level
imxrt = ["embassy-imxrt/mimxrt633s", "cortex-m"]
imxrt685 = ["embassy-imxrt/mimxrt685s", "cortex-m"]
cortex-m = ["dep:cortex-m"]

defmt = [
    "dep:defmt",
    "embassy-sync/defmt",
    "embassy-time/defmt",
    "embedded-cfu-protocol/defmt",
    "embedded-services/defmt",
]
log = [
    "dep:log",
    "embassy-sync/log",
    "embassy-time/log",
    "embedded-cfu-protocol/log",
    "embedded-services/log",
]
