[package]
name = "power-policy-service"
version = "0.1.0"
edition = "2024"
description = "HID embedded service implementation"
repository = "https://github.com/OpenDevicePartnership/embedded-services"
rust-version = "1.88"
license = "MIT"

[lints]
workspace = true

[dependencies]
defmt = { workspace = true, optional = true }
embassy-futures.workspace = true
embassy-sync.workspace = true
embassy-time.workspace = true
embedded-services.workspace = true
embedded-batteries-async.workspace = true
num_enum.workspace = true
bitfield.workspace = true
log = { workspace = true, optional = true }
heapless.workspace = true
power-policy-interface.workspace = true

[dev-dependencies]
static_cell.workspace = true
critical-section = { workspace = true, features = ["std"] }
embassy-time = { workspace = true, features = ["std", "generic-queue-8"] }
tokio = { workspace = true, features = ["rt", "macros", "time"] }
env_logger = "0.11.8"
log = { workspace = true }

[features]
default = []
defmt = [
    "dep:defmt",
    "embedded-services/defmt",
    "power-policy-interface/defmt",
    "embassy-time/defmt",
    "embassy-sync/defmt",
]
log = [
    "dep:log",
    "embedded-services/log",
    "power-policy-interface/log",
    "embassy-time/log",
    "embassy-sync/log",
]
