[package]
name = "thermal-service-messages"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
defmt = { workspace = true, optional = true }
embedded-services.workspace = true
num_enum.workspace = true
uuid.workspace = true

[lints]
workspace = true

[features]
defmt = ["dep:defmt"]
