[package]
name = "thermal-service-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
defmt = { workspace = true, optional = true }
embedded-services.workspace = true
thermal-service-interface.workspace = true
num_enum.workspace = true
uuid.workspace = true

[lints]
workspace = true

[features]
defmt = ["dep:defmt"]
