[package]
name = "thermal-service"
version = "0.1.0"
edition = "2024"
description = "Thermal service implementation"
repository = "https://github.com/OpenDevicePartnership/embedded-services"
rust-version = "1.88"
license = "MIT"

[dependencies]
defmt = { workspace = true, optional = true }
log = { workspace = true, optional = true }
embassy-futures.workspace = true
embassy-sync.workspace = true
embassy-time.workspace = true
embedded-services.workspace = true
heapless.workspace = true
odp-service-common.workspace = true
thermal-service-interface.workspace = true
embedded-fans-async = "0.2.0"
embedded-sensors-hal-async = "0.3.0"

[features]
default = []
defmt = [
    "dep:defmt",
    "embedded-services/defmt",
    "embassy-time/defmt",
    "embassy-sync/defmt",
    "embedded-fans-async/defmt",
    "embedded-sensors-hal-async/defmt",
    "thermal-service-interface/defmt",
]
log = [
    "dep:log",
    "embedded-services/log",
    "embassy-time/log",
    "embassy-sync/log",
]
mock = []

[lints]
workspace = true
