[package]
name = "time-alarm-service"
description = "Time and Alarm service implementation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bitfield.workspace = true
defmt = { workspace = true, optional = true }
log = { workspace = true, optional = true }
embassy-executor.workspace = true
embassy-futures.workspace = true
embassy-sync.workspace = true
embassy-time.workspace = true
embedded-mcu-hal.workspace = true
embedded-services.workspace = true
time-alarm-service-messages.workspace = true
zerocopy.workspace = true

[features]
defmt = [
    "dep:defmt",
    "embedded-services/defmt",
    "embassy-time/defmt",
    "embassy-sync/defmt",
    "embassy-executor/defmt",
    "time-alarm-service-messages/defmt",
]

log = ["dep:log", "embedded-services/log", "embassy-time/log"]

[lints]
workspace = true
