[package]
name = "time-alarm-service"
description = "Time and Alarm service implementation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.cargo-machete]
ignored = ["log", "defmt", "critical-section"]

[dependencies]
defmt = { workspace = true, optional = true }
log = { workspace = true, optional = true }
embassy-futures.workspace = true
embassy-sync.workspace = true
embassy-time.workspace = true
embedded-mcu-hal.workspace = true
embedded-services.workspace = true
odp-service-common.workspace = true
time-alarm-service-interface.workspace = true
zerocopy.workspace = true

[features]
defmt = [
    "dep:defmt",
    "embedded-services/defmt",
    "embassy-time/defmt",
    "embassy-sync/defmt",
    "time-alarm-service-interface/defmt",
]

log = ["dep:log", "embedded-services/log", "embassy-time/log"]
mock = []

[lints]
workspace = true

[dev-dependencies]
time-alarm-service = { path = ".", features = ["mock"] }
tokio = { workspace = true, features = ["rt", "macros", "time"] }
critical-section = { version = "1.1", features = ["std"] }
embassy-time = { workspace = true, features = ["std", "generic-queue-8"] }
