[package]
name = "type-c-interface-test-mocks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
embedded-services = { workspace = true }
embedded-usb-pd = { workspace = true }
type-c-interface = { workspace = true }

[features]
default = []
log = ["embedded-services/log", "type-c-interface/log"]

[lints]
workspace = true
