[package]
name = "type-c-service"
version = "0.1.0"
edition = "2024"
description = "HID embedded service implementation"
repository = "https://github.com/OpenDevicePartnership/embedded-services"
rust-version.workspace = true
license = "MIT"

[package.metadata.cargo-machete]
ignored = ["log"]

[lints]
workspace = true

[dependencies]
bitfield.workspace = true
bitflags = { workspace = true }
defmt = { workspace = true, optional = true }
embedded-cfu-protocol.workspace = true
embassy-futures.workspace = true
embassy-sync.workspace = true
embassy-time.workspace = true
embedded-hal-async.workspace = true
embedded-services.workspace = true
embedded-usb-pd.workspace = true
heapless.workspace = true
log = { workspace = true, optional = true }
static_cell = { workspace = true }
tps6699x = { workspace = true, features = ["embassy"] }

[dev-dependencies]
embassy-time = { workspace = true, features = [
    "log",
    "std",
    "generic-queue-8",
] }
critical-section = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["rt", "macros", "time"] }
env_logger = "0.11.8"
paste = "1"
static_cell.workspace = true
log.workspace = true
power-policy-service.workspace = true

[features]
default = []
defmt = [
    "dep:defmt",
    "embedded-services/defmt",
    "embassy-time/defmt",
    "embassy-sync/defmt",
    "tps6699x/defmt",
    "embedded-usb-pd/defmt",
]
log = [
    "dep:log",
    "embedded-services/log",
    "embassy-time/log",
    "embassy-sync/log",
    "tps6699x/log",
    "power-policy-service/log",
]
