[package]
name = "type-c-service"
version = "0.1.0"
edition = "2024"
description = "HID embedded service implementation"
repository = "https://github.com/OpenDevicePartnership/embedded-services"
rust-version.workspace = true
license = "MIT"

[package.metadata.cargo-machete]
ignored = ["log"]

[lints]
workspace = true

[dependencies]
defmt = { workspace = true, optional = true }
embassy-futures.workspace = true
embassy-sync.workspace = true
embassy-time.workspace = true
embedded-services.workspace = true
embedded-usb-pd.workspace = true
fw-update-interface.workspace = true
heapless.workspace = true
log = { workspace = true, optional = true }
power-policy-interface.workspace = true
type-c-interface.workspace = true

[dev-dependencies]
embassy-time = { workspace = true, features = ["std", "generic-queue-8"] }
embassy-sync = { workspace = true, features = ["std"] }
embassy-futures.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "time"] }
log.workspace = true
env_logger = "0.11.8"
type-c-interface-test-mocks.workspace = true
power-policy-service.workspace = true
paste.workspace = true
critical-section = { workspace = true, features = ["std"] }

[features]
default = []
defmt = [
    "dep:defmt",
    "embedded-services/defmt",
    "embassy-time/defmt",
    "embassy-sync/defmt",
    "embedded-usb-pd/defmt",
    "power-policy-interface/defmt",
    "type-c-interface/defmt",
    "fw-update-interface/defmt",
    "power-policy-service/defmt",
]
log = [
    "dep:log",
    "embedded-services/log",
    "embassy-time/log",
    "embassy-sync/log",
    "power-policy-interface/log",
    "type-c-interface/log",
    "fw-update-interface/log",
    "power-policy-service/log",
    "type-c-interface-test-mocks/log",
]
